# HANGMAN

./: .gitignore  CMakeLists.txt  README.md  environment.yml
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake
assets/: words_2.txt  words_3.txt  words_4.txt
client/: client.c  client.h  gui.c  network_client.c  render.c  sdl_init.c
common/: protocol.h  utils.c  utils.h
server/: leaderboard.c  network.c  server.c  server.h  timer.c  timer.h  words.c
